# mediacccde_toot

./: .gitignore  Makefile  README.md  ansible.cfg  feed2toot.ini  inventory  playbook.yml
config/: feed2toot.ini
files/: requirements.txt
roles/rss2mastodon/defaults/: main.yml
roles/rss2mastodon/files/: pyproject.toml  requirements.txt
roles/rss2mastodon/tasks/: main.yml
roles/rss2mastodon/templates/: feed2toot.ini
