[tool.poetry]
name = "mediacccde_toot"
version = "0.1.0"
description = "relay new rss feeds from media.ccc.de to mastodon (bot)"
authors = ["Marco Bakera <marco@bakera.de>"]

[tool.poetry.dependencies]
python = "^3.6"
feed2toot = "^0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
